[project]
name = "cash-flow-app"
version = "0.1.0"
description = "Веб-приложение для учета движения денежных средств"
authors = [
    {name = "Балабин Иван Романович БИН-22-2"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
